# DAIR-BURST

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: BURSTConfig.cmake.in
docs/: DESIGN.md
include/BURST/: configuration_geometry.hpp  configuration_space.hpp  functions.hpp  geometric_types.hpp  geometry.hpp  graphics_types.hpp  kernel.hpp  kernel_types.hpp  logging.hpp  models.hpp  numeric.hpp  numeric_types.hpp  renderable.hpp  robot.hpp  traits.hpp  types.hpp  wall_geometry.hpp  wall_space.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_configurationgeometry_construction.cpp  test_configurationgeometry_intersections.cpp  test_configurationgeometry_rendering.cpp  test_configurationspace_construction.cpp  test_configurationspace_intersections.cpp  test_configurationspace_rendering.cpp  test_helpers.hpp  test_miscellaneous_rendering.cpp  test_movementmodel.cpp  test_movementmodel_functor.cpp  test_movementmodel_path.cpp  test_robot.cpp  test_robot_rendering.cpp  test_rotationmodel.cpp  test_wallgeometry.cpp  test_wallgeometry_class.hpp  test_wallgeometry_construction.cpp  test_wallgeometry_rendering.cpp  test_wallspace_construction.cpp  test_wallspace_rendering.cpp
